--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="stylesheet" href="../leaflet/leaflet.css" />
+    <link rel="stylesheet" href="leaflet.css" />
     <title>Melbourne Water Usage</title>
-    <script src="../jquery/jquery-2.0.3.min.js" type="text/javascript"></script>
-    <script src="../leaflet/leaflet.js" type="text/javascript"></script>
-    <script src="./loadmap.js" type="text/javascript"></script>
-    <script src="./postcodes_14.json" type="text/javascript"></script>
+    <script src="jquery-2.0.3.min.js" type="text/javascript"></script>
+    <script src="leaflet.js"></script>
+    <script src="loadmap.js" type="text/javascript"></script>
+    <script src="postcodes_14.json" type="text/javascript"></script>
     <style>
         .info {
             padding: 6px 8px;
-            font: 12px/14px Arial, Helvetica, sans-serif;
+            font: 14px/16px Arial, Helvetica, sans-serif;
+            line-height: 20px;
             background: white;
             background: rgba(255,255,255,0.8);
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -25,7 +26,7 @@
 
         .legend {
             text-align: left;
-            line-height: 18px;
+            line-height: 20px;
             color: #555;
         }
 
@@ -42,7 +43,7 @@
             font-weight: bold;
             border: 0;
             text-align: center;
-            line-height: 18px;
+            line-height: 20px;
             color: #555;
             opacity: 0.7;
         }
