--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="jquery-2.0.3.min.js" type="text/javascript"></script>
     <script src="leaflet.js"></script>
     <script src="loadmap.js" type="text/javascript"></script>
-    <script src="postcodes_14.json" type="text/javascript"></script>
     <style>
         .info {
             padding: 6px 8px;
@@ -28,6 +27,7 @@
             text-align: left;
             line-height: 20px;
             color: #555;
+            font: 14px/16px Arial, Helvetica, sans-serif;
         }
 
             .legend i {
@@ -39,7 +39,6 @@
             }
 
         .dropdown {
-            display: inline-block;
             font-weight: bold;
             border: 0;
             text-align: center;
